--- a/ThinkWhat/UI/Storyboards/Auth.storyboard
+++ b/ThinkWhat/UI/Storyboards/Auth.storyboard
@@ -1015,9 +1015,9 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Vze-cD-6tx"/>
-        <segue reference="h1h-Jz-9YR"/>
+        <segue reference="hT0-PF-8mW"/>
         <segue reference="oO1-ii-gCi"/>
-        <segue reference="bec-WO-31D"/>
+        <segue reference="DXW-pt-dWO"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
 </document>
