--- a/ThinkWhat/UI/CustomAlertView/CustomAlertView.xib
+++ b/ThinkWhat/UI/CustomAlertView/CustomAlertView.xib
@@ -9,11 +9,11 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
+        <array key="OpenSans-Light.ttf">
+            <string>OpenSans-Light</string>
+        </array>
         <array key="OpenSans-Regular.ttf">
             <string>OpenSans</string>
-        </array>
-        <array key="OpenSans-Semibold.ttf">
-            <string>OpenSans-Semibold</string>
         </array>
     </customFonts>
     <objects>
@@ -22,10 +22,10 @@
                 <outlet property="alertBody" destination="MzQ-71-Zjh" id="oic-J4-Y8d"/>
                 <outlet property="alertText" destination="ahi-fN-SGc" id="hCK-5l-n59"/>
                 <outlet property="alertTitle" destination="ooY-ao-9DK" id="sCU-g3-T0u"/>
+                <outlet property="blurEffectView" destination="QNd-7c-V2y" id="oBe-XM-b8G"/>
                 <outlet property="contentView" destination="iN0-l3-epB" id="JOf-iv-NCB"/>
                 <outlet property="frameView" destination="TWP-hf-789" id="gZX-nr-95d"/>
                 <outlet property="imageContainer" destination="eOn-8K-4Er" id="v9k-gj-maE"/>
-                <outlet property="lightBlurView" destination="QNd-7c-V2y" id="oBe-XM-b8G"/>
                 <outlet property="loadingIndicator" destination="ROG-EV-S2S" id="U2m-b8-k3K"/>
                 <outlet property="lowerView" destination="c6D-fG-0g3" id="0Qv-fz-5q7"/>
                 <outlet property="middleView" destination="bBD-Oo-sok" id="tKk-UK-6gp"/>
@@ -33,13 +33,13 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view opaque="NO" contentMode="scaleToFill" id="iN0-l3-epB">
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <visualEffectView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QNd-7c-V2y">
                     <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                    <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XKt-j4-DRd">
+                    <view key="contentView" opaque="NO" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="XKt-j4-DRd">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
@@ -50,14 +50,14 @@
                                         <rect key="frame" x="0.0" y="0.0" width="300" height="120"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eOn-8K-4Er">
-                                                <rect key="frame" x="97" y="14" width="106" height="106"/>
+                                                <rect key="frame" x="105" y="30" width="90" height="90"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" secondItem="eOn-8K-4Er" secondAttribute="height" multiplier="1:1" id="noY-i8-Tv3"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstItem="eOn-8K-4Er" firstAttribute="width" secondItem="d43-Yk-ph5" secondAttribute="height" multiplier="53:60" id="2qu-ar-cHu"/>
+                                            <constraint firstItem="eOn-8K-4Er" firstAttribute="width" secondItem="d43-Yk-ph5" secondAttribute="height" multiplier="45:60" id="2qu-ar-cHu"/>
                                             <constraint firstAttribute="bottom" secondItem="eOn-8K-4Er" secondAttribute="bottom" id="KN7-bL-I7V"/>
                                             <constraint firstItem="eOn-8K-4Er" firstAttribute="centerX" secondItem="d43-Yk-ph5" secondAttribute="centerX" id="lca-qm-zfF"/>
                                         </constraints>
@@ -73,13 +73,13 @@
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="MzQ-71-Zjh">
                                                 <rect key="frame" x="15" y="38" width="270" height="88"/>
-                                                <fontDescription key="fontDescription" name="OpenSans-Semibold" family="Open Sans" pointSize="17"/>
+                                                <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="17"/>
                                                 <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="10" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="ahi-fN-SGc">
                                                 <rect key="frame" x="15" y="0.0" width="270" height="126"/>
-                                                <fontDescription key="fontDescription" name="OpenSans" family="Open Sans" pointSize="17"/>
+                                                <fontDescription key="fontDescription" name="OpenSans-Light" family="Open Sans" pointSize="17"/>
                                                 <color key="textColor" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
@@ -140,20 +140,23 @@
                                         <color key="value" red="0.14901960780000001" green="0.14901960780000001" blue="0.14901960780000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                                        <real key="value" value="2"/>
+                                        <real key="value" value="0.0"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="shadow" value="YES"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                         </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="TWP-hf-789" firstAttribute="centerY" secondItem="XKt-j4-DRd" secondAttribute="centerY" id="Gv2-v0-Mw3"/>
                             <constraint firstItem="TWP-hf-789" firstAttribute="centerX" secondItem="XKt-j4-DRd" secondAttribute="centerX" id="TrZ-1Y-qgk"/>
                         </constraints>
                     </view>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <blurEffect style="light"/>
                 </visualEffectView>
             </subviews>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
             <constraints>
                 <constraint firstItem="QNd-7c-V2y" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9fM-Li-DRy"/>
                 <constraint firstAttribute="trailing" secondItem="QNd-7c-V2y" secondAttribute="trailing" id="Ahz-J0-pTc"/>
